// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should change page 1`] = `
<MockRouter>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "pathname": "/",
          "search": "?backPath=%2F",
        },
        Object {
          "pathname": "/processes",
          "search": "?backPath=%2F",
        },
        Object {
          "pathname": "/slas/1234",
          "search": "?backPath=%2Fprocesses",
        },
      ]
    }
    keyLength={0}
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "pathname": "/",
              "search": "?backPath=%2F",
            },
            Object {
              "hash": "",
              "pathname": "/processes",
              "search": "?backPath=%2F",
            },
            Object {
              "hash": "",
              "pathname": "/slas/1234",
              "search": "?backPath=%2Fprocesses",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 3,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "/",
            "search": "?backPath=%2F",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <Pagination
        onSelectPage={[Function]}
        pageSize={1}
        totalCount={10}
      >
        <ul
          className="pagination pull-right"
        >
          <withRouter(PageItem)
            disabled={true}
            key="process_list_pag_prev_-1"
            onChangePage={[Function]}
            page={-1}
            type="prev"
          >
            <Route>
              <PageItem
                disabled={true}
                history={
                  Object {
                    "action": "POP",
                    "block": [Function],
                    "canGo": [Function],
                    "createHref": [Function],
                    "entries": Array [
                      Object {
                        "hash": "",
                        "pathname": "/",
                        "search": "?backPath=%2F",
                      },
                      Object {
                        "hash": "",
                        "pathname": "/processes",
                        "search": "?backPath=%2F",
                      },
                      Object {
                        "hash": "",
                        "pathname": "/slas/1234",
                        "search": "?backPath=%2Fprocesses",
                      },
                    ],
                    "go": [Function],
                    "goBack": [Function],
                    "goForward": [Function],
                    "index": 0,
                    "length": 3,
                    "listen": [Function],
                    "location": Object {
                      "hash": "",
                      "pathname": "/",
                      "search": "?backPath=%2F",
                    },
                    "push": [Function],
                    "replace": [Function],
                  }
                }
                location={
                  Object {
                    "hash": "",
                    "pathname": "/",
                    "search": "?backPath=%2F",
                  }
                }
                match={
                  Object {
                    "isExact": true,
                    "params": Object {},
                    "path": "/",
                    "url": "/",
                  }
                }
                onChangePage={[Function]}
                page={-1}
                type="prev"
              >
                <li
                  className="page-item disabled"
                  onClick={[Function]}
                >
                  <Link
                    className="page-link"
                    replace={false}
                    to={
                      Object {
                        "pathname": "/",
                        "search": "?backPath=%2F",
                      }
                    }
                  >
                    <a
                      className="page-link"
                      href="/?backPath=%2F"
                      onClick={[Function]}
                    >
                      <Icon
                        iconName="angle-left"
                      >
                        <svg
                          className="lexicon-icon lexicon-icon-angle-left"
                          focusable="false"
                          role="presentation"
                        >
                          <use
                            href="http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#angle-left"
                          />
                        </svg>
                      </Icon>
                      <span
                        className="sr-only"
                      >
                        Previous
                      </span>
                    </a>
                  </Link>
                </li>
              </PageItem>
            </Route>
          </withRouter(PageItem)>
          <withRouter(PageItem)
            highlighted={false}
            key="process_list_pag_1"
            onChangePage={[Function]}
            page={1}
          >
            <Route>
              <PageItem
                highlighted={false}
                history={
                  Object {
                    "action": "POP",
                    "block": [Function],
                    "canGo": [Function],
                    "createHref": [Function],
                    "entries": Array [
                      Object {
                        "hash": "",
                        "pathname": "/",
                        "search": "?backPath=%2F",
                      },
                      Object {
                        "hash": "",
                        "pathname": "/processes",
                        "search": "?backPath=%2F",
                      },
                      Object {
                        "hash": "",
                        "pathname": "/slas/1234",
                        "search": "?backPath=%2Fprocesses",
                      },
                    ],
                    "go": [Function],
                    "goBack": [Function],
                    "goForward": [Function],
                    "index": 0,
                    "length": 3,
                    "listen": [Function],
                    "location": Object {
                      "hash": "",
                      "pathname": "/",
                      "search": "?backPath=%2F",
                    },
                    "push": [Function],
                    "replace": [Function],
                  }
                }
                location={
                  Object {
                    "hash": "",
                    "pathname": "/",
                    "search": "?backPath=%2F",
                  }
                }
                match={
                  Object {
                    "isExact": true,
                    "params": Object {},
                    "path": "/",
                    "url": "/",
                  }
                }
                onChangePage={[Function]}
                page={1}
              >
                <li
                  className="page-item"
                  onClick={[Function]}
                >
                  <Link
                    className="page-link"
                    replace={false}
                    to={
                      Object {
                        "pathname": "/",
                        "search": "?backPath=%2F",
                      }
                    }
                  >
                    <a
                      className="page-link"
                      href="/?backPath=%2F"
                      onClick={[Function]}
                    >
                      1
                    </a>
                  </Link>
                </li>
              </PageItem>
            </Route>
          </withRouter(PageItem)>
          <withRouter(PageItem)
            highlighted={true}
            key="process_list_pag_active_0"
            onChangePage={[Function]}
            page={0}
          >
            <Route>
              <PageItem
                highlighted={true}
                history={
                  Object {
                    "action": "POP",
                    "block": [Function],
                    "canGo": [Function],
                    "createHref": [Function],
                    "entries": Array [
                      Object {
                        "hash": "",
                        "pathname": "/",
                        "search": "?backPath=%2F",
                      },
                      Object {
                        "hash": "",
                        "pathname": "/processes",
                        "search": "?backPath=%2F",
                      },
                      Object {
                        "hash": "",
                        "pathname": "/slas/1234",
                        "search": "?backPath=%2Fprocesses",
                      },
                    ],
                    "go": [Function],
                    "goBack": [Function],
                    "goForward": [Function],
                    "index": 0,
                    "length": 3,
                    "listen": [Function],
                    "location": Object {
                      "hash": "",
                      "pathname": "/",
                      "search": "?backPath=%2F",
                    },
                    "push": [Function],
                    "replace": [Function],
                  }
                }
                location={
                  Object {
                    "hash": "",
                    "pathname": "/",
                    "search": "?backPath=%2F",
                  }
                }
                match={
                  Object {
                    "isExact": true,
                    "params": Object {},
                    "path": "/",
                    "url": "/",
                  }
                }
                onChangePage={[Function]}
                page={0}
              >
                <li
                  className="page-item active"
                  onClick={[Function]}
                >
                  <Link
                    className="page-link"
                    replace={false}
                    to={
                      Object {
                        "pathname": "/",
                        "search": "?backPath=%2F",
                      }
                    }
                  >
                    <a
                      className="page-link"
                      href="/?backPath=%2F"
                      onClick={[Function]}
                    >
                      0
                    </a>
                  </Link>
                </li>
              </PageItem>
            </Route>
          </withRouter(PageItem)>
          <withRouter(PageItem)
            key="process_list_pag_plus_1"
            onChangePage={[Function]}
            page={1}
          >
            <Route>
              <PageItem
                history={
                  Object {
                    "action": "POP",
                    "block": [Function],
                    "canGo": [Function],
                    "createHref": [Function],
                    "entries": Array [
                      Object {
                        "hash": "",
                        "pathname": "/",
                        "search": "?backPath=%2F",
                      },
                      Object {
                        "hash": "",
                        "pathname": "/processes",
                        "search": "?backPath=%2F",
                      },
                      Object {
                        "hash": "",
                        "pathname": "/slas/1234",
                        "search": "?backPath=%2Fprocesses",
                      },
                    ],
                    "go": [Function],
                    "goBack": [Function],
                    "goForward": [Function],
                    "index": 0,
                    "length": 3,
                    "listen": [Function],
                    "location": Object {
                      "hash": "",
                      "pathname": "/",
                      "search": "?backPath=%2F",
                    },
                    "push": [Function],
                    "replace": [Function],
                  }
                }
                location={
                  Object {
                    "hash": "",
                    "pathname": "/",
                    "search": "?backPath=%2F",
                  }
                }
                match={
                  Object {
                    "isExact": true,
                    "params": Object {},
                    "path": "/",
                    "url": "/",
                  }
                }
                onChangePage={[Function]}
                page={1}
              >
                <li
                  className="page-item"
                  onClick={[Function]}
                >
                  <Link
                    className="page-link"
                    replace={false}
                    to={
                      Object {
                        "pathname": "/",
                        "search": "?backPath=%2F",
                      }
                    }
                  >
                    <a
                      className="page-link"
                      href="/?backPath=%2F"
                      onClick={[Function]}
                    >
                      1
                    </a>
                  </Link>
                </li>
              </PageItem>
            </Route>
          </withRouter(PageItem)>
          <li
            className="dropdown page-item"
            key="process_list_pag_2"
          >
            <a
              className="dropdown-toggle page-link"
              data-toggle="dropdown"
              href="javascript:;"
            >
              <span
                aria-hidden="true"
              >
                ...
              </span>
              <span
                className="sr-only"
              />
            </a>
            <div
              className="dropdown-menu dropdown-menu-top-center"
            >
              <ul
                className="inline-scroller link-list"
                data-current-index="2"
                key="process_list_pag_sublist_2"
              >
                <PageLink
                  key="process_list_pag_sublist_item_2"
                  onChangePage={[Function]}
                  page={2}
                >
                  <li
                    className="page-item"
                    onClick={[Function]}
                  >
                    <a
                      className="page-link"
                      href="#2"
                    >
                      <span
                        className="sr-only"
                      />
                      2
                    </a>
                  </li>
                </PageLink>
                <PageLink
                  key="process_list_pag_sublist_item_3"
                  onChangePage={[Function]}
                  page={3}
                >
                  <li
                    className="page-item"
                    onClick={[Function]}
                  >
                    <a
                      className="page-link"
                      href="#3"
                    >
                      <span
                        className="sr-only"
                      />
                      3
                    </a>
                  </li>
                </PageLink>
                <PageLink
                  key="process_list_pag_sublist_item_4"
                  onChangePage={[Function]}
                  page={4}
                >
                  <li
                    className="page-item"
                    onClick={[Function]}
                  >
                    <a
                      className="page-link"
                      href="#4"
                    >
                      <span
                        className="sr-only"
                      />
                      4
                    </a>
                  </li>
                </PageLink>
                <PageLink
                  key="process_list_pag_sublist_item_5"
                  onChangePage={[Function]}
                  page={5}
                >
                  <li
                    className="page-item"
                    onClick={[Function]}
                  >
                    <a
                      className="page-link"
                      href="#5"
                    >
                      <span
                        className="sr-only"
                      />
                      5
                    </a>
                  </li>
                </PageLink>
                <PageLink
                  key="process_list_pag_sublist_item_6"
                  onChangePage={[Function]}
                  page={6}
                >
                  <li
                    className="page-item"
                    onClick={[Function]}
                  >
                    <a
                      className="page-link"
                      href="#6"
                    >
                      <span
                        className="sr-only"
                      />
                      6
                    </a>
                  </li>
                </PageLink>
                <PageLink
                  key="process_list_pag_sublist_item_7"
                  onChangePage={[Function]}
                  page={7}
                >
                  <li
                    className="page-item"
                    onClick={[Function]}
                  >
                    <a
                      className="page-link"
                      href="#7"
                    >
                      <span
                        className="sr-only"
                      />
                      7
                    </a>
                  </li>
                </PageLink>
                <PageLink
                  key="process_list_pag_sublist_item_8"
                  onChangePage={[Function]}
                  page={8}
                >
                  <li
                    className="page-item"
                    onClick={[Function]}
                  >
                    <a
                      className="page-link"
                      href="#8"
                    >
                      <span
                        className="sr-only"
                      />
                      8
                    </a>
                  </li>
                </PageLink>
                <PageLink
                  key="process_list_pag_sublist_item_9"
                  onChangePage={[Function]}
                  page={9}
                >
                  <li
                    className="page-item"
                    onClick={[Function]}
                  >
                    <a
                      className="page-link"
                      href="#9"
                    >
                      <span
                        className="sr-only"
                      />
                      9
                    </a>
                  </li>
                </PageLink>
              </ul>
            </div>
          </li>
          <withRouter(PageItem)
            highlighted={false}
            key="process_list_pag_last_10"
            onChangePage={[Function]}
            page={10}
          >
            <Route>
              <PageItem
                highlighted={false}
                history={
                  Object {
                    "action": "POP",
                    "block": [Function],
                    "canGo": [Function],
                    "createHref": [Function],
                    "entries": Array [
                      Object {
                        "hash": "",
                        "pathname": "/",
                        "search": "?backPath=%2F",
                      },
                      Object {
                        "hash": "",
                        "pathname": "/processes",
                        "search": "?backPath=%2F",
                      },
                      Object {
                        "hash": "",
                        "pathname": "/slas/1234",
                        "search": "?backPath=%2Fprocesses",
                      },
                    ],
                    "go": [Function],
                    "goBack": [Function],
                    "goForward": [Function],
                    "index": 0,
                    "length": 3,
                    "listen": [Function],
                    "location": Object {
                      "hash": "",
                      "pathname": "/",
                      "search": "?backPath=%2F",
                    },
                    "push": [Function],
                    "replace": [Function],
                  }
                }
                location={
                  Object {
                    "hash": "",
                    "pathname": "/",
                    "search": "?backPath=%2F",
                  }
                }
                match={
                  Object {
                    "isExact": true,
                    "params": Object {},
                    "path": "/",
                    "url": "/",
                  }
                }
                onChangePage={[Function]}
                page={10}
              >
                <li
                  className="page-item"
                  onClick={[Function]}
                >
                  <Link
                    className="page-link"
                    replace={false}
                    to={
                      Object {
                        "pathname": "/",
                        "search": "?backPath=%2F",
                      }
                    }
                  >
                    <a
                      className="page-link"
                      href="/?backPath=%2F"
                      onClick={[Function]}
                    >
                      10
                    </a>
                  </Link>
                </li>
              </PageItem>
            </Route>
          </withRouter(PageItem)>
          <withRouter(PageItem)
            disabled={false}
            key="process_list_pag_next_1"
            onChangePage={[Function]}
            page={1}
            type="next"
          >
            <Route>
              <PageItem
                disabled={false}
                history={
                  Object {
                    "action": "POP",
                    "block": [Function],
                    "canGo": [Function],
                    "createHref": [Function],
                    "entries": Array [
                      Object {
                        "hash": "",
                        "pathname": "/",
                        "search": "?backPath=%2F",
                      },
                      Object {
                        "hash": "",
                        "pathname": "/processes",
                        "search": "?backPath=%2F",
                      },
                      Object {
                        "hash": "",
                        "pathname": "/slas/1234",
                        "search": "?backPath=%2Fprocesses",
                      },
                    ],
                    "go": [Function],
                    "goBack": [Function],
                    "goForward": [Function],
                    "index": 0,
                    "length": 3,
                    "listen": [Function],
                    "location": Object {
                      "hash": "",
                      "pathname": "/",
                      "search": "?backPath=%2F",
                    },
                    "push": [Function],
                    "replace": [Function],
                  }
                }
                location={
                  Object {
                    "hash": "",
                    "pathname": "/",
                    "search": "?backPath=%2F",
                  }
                }
                match={
                  Object {
                    "isExact": true,
                    "params": Object {},
                    "path": "/",
                    "url": "/",
                  }
                }
                onChangePage={[Function]}
                page={1}
                type="next"
              >
                <li
                  className="page-item"
                  onClick={[Function]}
                >
                  <Link
                    className="page-link"
                    replace={false}
                    to={
                      Object {
                        "pathname": "/",
                        "search": "?backPath=%2F",
                      }
                    }
                  >
                    <a
                      className="page-link"
                      href="/?backPath=%2F"
                      onClick={[Function]}
                    >
                      <Icon
                        iconName="angle-right"
                      >
                        <svg
                          className="lexicon-icon lexicon-icon-angle-right"
                          focusable="false"
                          role="presentation"
                        >
                          <use
                            href="http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#angle-right"
                          />
                        </svg>
                      </Icon>
                      <span
                        className="sr-only"
                      >
                        Next
                      </span>
                    </a>
                  </Link>
                </li>
              </PageItem>
            </Route>
          </withRouter(PageItem)>
        </ul>
      </Pagination>
    </Router>
  </MemoryRouter>
</MockRouter>
`;

exports[`Should render component 1`] = `
<ul
  className="pagination pull-right"
>
  <li
    className="page-item disabled"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      <svg
        className="lexicon-icon lexicon-icon-angle-left"
        focusable="false"
        role="presentation"
      >
        <use
          href="http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#angle-left"
        />
      </svg>
      <span
        className="sr-only"
      >
        Previous
      </span>
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      1
    </a>
  </li>
  <li
    className="page-item active"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      0
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      1
    </a>
  </li>
  <li
    className="dropdown page-item"
  >
    <a
      className="dropdown-toggle page-link"
      data-toggle="dropdown"
      href="javascript:;"
    >
      <span
        aria-hidden="true"
      >
        ...
      </span>
      <span
        className="sr-only"
      />
    </a>
    <div
      className="dropdown-menu dropdown-menu-top-center"
    >
      <ul
        className="inline-scroller link-list"
        data-current-index="2"
      >
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#2"
          >
            <span
              className="sr-only"
            />
            2
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#3"
          >
            <span
              className="sr-only"
            />
            3
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#4"
          >
            <span
              className="sr-only"
            />
            4
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#5"
          >
            <span
              className="sr-only"
            />
            5
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#6"
          >
            <span
              className="sr-only"
            />
            6
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#7"
          >
            <span
              className="sr-only"
            />
            7
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#8"
          >
            <span
              className="sr-only"
            />
            8
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#9"
          >
            <span
              className="sr-only"
            />
            9
          </a>
        </li>
      </ul>
    </div>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      10
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      <svg
        className="lexicon-icon lexicon-icon-angle-right"
        focusable="false"
        role="presentation"
      >
        <use
          href="http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#angle-right"
        />
      </svg>
      <span
        className="sr-only"
      >
        Next
      </span>
    </a>
  </li>
</ul>
`;

exports[`Should render component at page 1 1`] = `
<ul
  className="pagination pull-right"
>
  <li
    className="page-item disabled"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      <svg
        className="lexicon-icon lexicon-icon-angle-left"
        focusable="false"
        role="presentation"
      >
        <use
          href="http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#angle-left"
        />
      </svg>
      <span
        className="sr-only"
      >
        Previous
      </span>
    </a>
  </li>
  <li
    className="page-item active"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      1
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      2
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      3
    </a>
  </li>
  <li
    className="dropdown page-item"
  >
    <a
      className="dropdown-toggle page-link"
      data-toggle="dropdown"
      href="javascript:;"
    >
      <span
        aria-hidden="true"
      >
        ...
      </span>
      <span
        className="sr-only"
      />
    </a>
    <div
      className="dropdown-menu dropdown-menu-top-center"
    >
      <ul
        className="inline-scroller link-list"
        data-current-index="4"
      >
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#4"
          >
            <span
              className="sr-only"
            />
            4
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#5"
          >
            <span
              className="sr-only"
            />
            5
          </a>
        </li>
      </ul>
    </div>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      6
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      <svg
        className="lexicon-icon lexicon-icon-angle-right"
        focusable="false"
        role="presentation"
      >
        <use
          href="http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#angle-right"
        />
      </svg>
      <span
        className="sr-only"
      >
        Next
      </span>
    </a>
  </li>
</ul>
`;

exports[`Should render component at page 2 1`] = `
<ul
  className="pagination pull-right"
>
  <li
    className="page-item disabled"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      <svg
        className="lexicon-icon lexicon-icon-angle-left"
        focusable="false"
        role="presentation"
      >
        <use
          href="http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#angle-left"
        />
      </svg>
      <span
        className="sr-only"
      >
        Previous
      </span>
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      1
    </a>
  </li>
  <li
    className="page-item active"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      0
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      1
    </a>
  </li>
  <li
    className="dropdown page-item"
  >
    <a
      className="dropdown-toggle page-link"
      data-toggle="dropdown"
      href="javascript:;"
    >
      <span
        aria-hidden="true"
      >
        ...
      </span>
      <span
        className="sr-only"
      />
    </a>
    <div
      className="dropdown-menu dropdown-menu-top-center"
    >
      <ul
        className="inline-scroller link-list"
        data-current-index="2"
      >
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#2"
          >
            <span
              className="sr-only"
            />
            2
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#3"
          >
            <span
              className="sr-only"
            />
            3
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#4"
          >
            <span
              className="sr-only"
            />
            4
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#5"
          >
            <span
              className="sr-only"
            />
            5
          </a>
        </li>
      </ul>
    </div>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      6
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      <svg
        className="lexicon-icon lexicon-icon-angle-right"
        focusable="false"
        role="presentation"
      >
        <use
          href="http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#angle-right"
        />
      </svg>
      <span
        className="sr-only"
      >
        Next
      </span>
    </a>
  </li>
</ul>
`;

exports[`Should render component at page 3 1`] = `
<ul
  className="pagination pull-right"
>
  <li
    className="page-item disabled"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      <svg
        className="lexicon-icon lexicon-icon-angle-left"
        focusable="false"
        role="presentation"
      >
        <use
          href="http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#angle-left"
        />
      </svg>
      <span
        className="sr-only"
      >
        Previous
      </span>
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      1
    </a>
  </li>
  <li
    className="page-item active"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      0
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      1
    </a>
  </li>
  <li
    className="dropdown page-item"
  >
    <a
      className="dropdown-toggle page-link"
      data-toggle="dropdown"
      href="javascript:;"
    >
      <span
        aria-hidden="true"
      >
        ...
      </span>
      <span
        className="sr-only"
      />
    </a>
    <div
      className="dropdown-menu dropdown-menu-top-center"
    >
      <ul
        className="inline-scroller link-list"
        data-current-index="2"
      >
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#2"
          >
            <span
              className="sr-only"
            />
            2
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#3"
          >
            <span
              className="sr-only"
            />
            3
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#4"
          >
            <span
              className="sr-only"
            />
            4
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#5"
          >
            <span
              className="sr-only"
            />
            5
          </a>
        </li>
      </ul>
    </div>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      6
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      <svg
        className="lexicon-icon lexicon-icon-angle-right"
        focusable="false"
        role="presentation"
      >
        <use
          href="http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#angle-right"
        />
      </svg>
      <span
        className="sr-only"
      >
        Next
      </span>
    </a>
  </li>
</ul>
`;

exports[`Should render component at page 4 1`] = `
<ul
  className="pagination pull-right"
>
  <li
    className="page-item disabled"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      <svg
        className="lexicon-icon lexicon-icon-angle-left"
        focusable="false"
        role="presentation"
      >
        <use
          href="http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#angle-left"
        />
      </svg>
      <span
        className="sr-only"
      >
        Previous
      </span>
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      1
    </a>
  </li>
  <li
    className="page-item active"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      0
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      1
    </a>
  </li>
  <li
    className="dropdown page-item"
  >
    <a
      className="dropdown-toggle page-link"
      data-toggle="dropdown"
      href="javascript:;"
    >
      <span
        aria-hidden="true"
      >
        ...
      </span>
      <span
        className="sr-only"
      />
    </a>
    <div
      className="dropdown-menu dropdown-menu-top-center"
    >
      <ul
        className="inline-scroller link-list"
        data-current-index="2"
      >
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#2"
          >
            <span
              className="sr-only"
            />
            2
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#3"
          >
            <span
              className="sr-only"
            />
            3
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#4"
          >
            <span
              className="sr-only"
            />
            4
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#5"
          >
            <span
              className="sr-only"
            />
            5
          </a>
        </li>
      </ul>
    </div>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      6
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      <svg
        className="lexicon-icon lexicon-icon-angle-right"
        focusable="false"
        role="presentation"
      >
        <use
          href="http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#angle-right"
        />
      </svg>
      <span
        className="sr-only"
      >
        Next
      </span>
    </a>
  </li>
</ul>
`;

exports[`Should render component at page 5 1`] = `
<ul
  className="pagination pull-right"
>
  <li
    className="page-item disabled"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      <svg
        className="lexicon-icon lexicon-icon-angle-left"
        focusable="false"
        role="presentation"
      >
        <use
          href="http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#angle-left"
        />
      </svg>
      <span
        className="sr-only"
      >
        Previous
      </span>
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      1
    </a>
  </li>
  <li
    className="page-item active"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      0
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      1
    </a>
  </li>
  <li
    className="dropdown page-item"
  >
    <a
      className="dropdown-toggle page-link"
      data-toggle="dropdown"
      href="javascript:;"
    >
      <span
        aria-hidden="true"
      >
        ...
      </span>
      <span
        className="sr-only"
      />
    </a>
    <div
      className="dropdown-menu dropdown-menu-top-center"
    >
      <ul
        className="inline-scroller link-list"
        data-current-index="2"
      >
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#2"
          >
            <span
              className="sr-only"
            />
            2
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#3"
          >
            <span
              className="sr-only"
            />
            3
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#4"
          >
            <span
              className="sr-only"
            />
            4
          </a>
        </li>
        <li
          className="page-item"
          onClick={[Function]}
        >
          <a
            className="page-link"
            href="#5"
          >
            <span
              className="sr-only"
            />
            5
          </a>
        </li>
      </ul>
    </div>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      6
    </a>
  </li>
  <li
    className="page-item"
    onClick={[Function]}
  >
    <a
      className="page-link"
      href="/?backPath=%2F"
      onClick={[Function]}
    >
      <svg
        className="lexicon-icon lexicon-icon-angle-right"
        focusable="false"
        role="presentation"
      >
        <use
          href="http://localhost:8080/o/admin-theme/images/lexicon/icons.svg#angle-right"
        />
      </svg>
      <span
        className="sr-only"
      >
        Next
      </span>
    </a>
  </li>
</ul>
`;
